[project]
name = "cvrp-aco"
version = "0.1.0"
description = "CVRP with Ant Colony Optimization — MSI2 master's project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "joblib>=1.4",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "black>=24.8",
    "ruff>=0.6",
    "types-PyYAML",
    "pandas-stubs",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
exclude = [
    "build/",
    "results/",
]

[[tool.mypy.overrides]]
module = [
    "sklearn",
    "sklearn.*",
    "seaborn",
    "scipy",
    "scipy.*",
    "statsmodels",
    "statsmodels.*",
    "joblib",
    "matplotlib",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "I", "W", "B", "UP", "N", "SIM", "PL",
]
ignore = [
    "PLR0913",
    "PLR2004",
    "PLR0915",
    "N806",
]
